// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsDialog > Snapshot Tests > should render default state correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Settings                                                                                       │
│                                                                                                  │
│ Search: > Search settings                                                                        │
│                                                                                                  │
│                                                                                                  │
│ ▲                                                                                                │
│ ● Vim Mode                                             false                                     │
│                                                                                                  │
│   Disable Auto Update                                  false                                     │
│                                                                                                  │
│   Release Channel                                      Stable                                    │
│                                                                                                  │
│   Debug Keystroke Logging                              false                                     │
│                                                                                                  │
│   Language                                             Auto (detect from system)                 │
│                                                                                                  │
│   Output Format                                        Text                                      │
│                                                                                                  │
│   Hide Window Title                                    false                                     │
│                                                                                                  │
│   Show Status in Title                                 false                                     │
│                                                                                                  │
│ ▼                                                                                                │
│                                                                                                  │
│                                                                                                  │
│   Apply To                                                                                       │
│ ● User Settings                                                                                  │
│   Workspace Settings                                                                             │
│                                                                                                  │
│ (Use Enter to select, / to search, Tab to change focus)                                          │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render focused on scope selector 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│   Settings                                                                                       │
│                                                                                                  │
│ Search: > Search settings                                                                        │
│                                                                                                  │
│                                                                                                  │
│ ▲                                                                                                │
│   Vim Mode                                             false                                     │
│                                                                                                  │
│   Disable Auto Update                                  false                                     │
│                                                                                                  │
│   Release Channel                                      Stable                                    │
│                                                                                                  │
│   Debug Keystroke Logging                              false                                     │
│                                                                                                  │
│   Language                                             Auto (detect from system)                 │
│                                                                                                  │
│   Output Format                                        Text                                      │
│                                                                                                  │
│   Hide Window Title                                    false                                     │
│                                                                                                  │
│   Show Status in Title                                 false                                     │
│                                                                                                  │
│ ▼                                                                                                │
│                                                                                                  │
│                                                                                                  │
│ > Apply To                                                                                       │
│ ● 1. User Settings                                                                               │
│   2. Workspace Settings                                                                          │
│                                                                                                  │
│ (Use Enter to select, / to search, Tab to change focus)                                          │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with accessibility settings enabled 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Settings                                                                                       │
│                                                                                                  │
│ Search: > Search settings                                                                        │
│                                                                                                  │
│                                                                                                  │
│ ▲                                                                                                │
│ ● Vim Mode                                             true*                                     │
│                                                                                                  │
│   Disable Auto Update                                  false                                     │
│                                                                                                  │
│   Release Channel                                      Stable                                    │
│                                                                                                  │
│   Debug Keystroke Logging                              false                                     │
│                                                                                                  │
│   Language                                             Auto (detect from system)                 │
│                                                                                                  │
│   Output Format                                        Text                                      │
│                                                                                                  │
│   Hide Window Title                                    false                                     │
│                                                                                                  │
│   Show Status in Title                                 false                                     │
│                                                                                                  │
│ ▼                                                                                                │
│                                                                                                  │
│                                                                                                  │
│   Apply To                                                                                       │
│ ● User Settings                                                                                  │
│   Workspace Settings                                                                             │
│                                                                                                  │
│ (Use Enter to select, / to search, Tab to change focus)                                          │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with all boolean settings disabled 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Settings                                                                                       │
│                                                                                                  │
│ Search: > Search settings                                                                        │
│                                                                                                  │
│                                                                                                  │
│ ▲                                                                                                │
│ ● Vim Mode                                             false*                                    │
│                                                                                                  │
│   Disable Auto Update                                  false*                                    │
│                                                                                                  │
│   Release Channel                                      Stable                                    │
│                                                                                                  │
│   Debug Keystroke Logging                              false*                                    │
│                                                                                                  │
│   Language                                             Auto (detect from system)                 │
│                                                                                                  │
│   Output Format                                        Text                                      │
│                                                                                                  │
│   Hide Window Title                                    false*                                    │
│                                                                                                  │
│   Show Status in Title                                 false                                     │
│                                                                                                  │
│ ▼                                                                                                │
│                                                                                                  │
│                                                                                                  │
│   Apply To                                                                                       │
│ ● User Settings                                                                                  │
│   Workspace Settings                                                                             │
│                                                                                                  │
│ (Use Enter to select, / to search, Tab to change focus)                                          │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with file filtering settings configured 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Settings                                                                                       │
│                                                                                                  │
│ Search: > Search settings                                                                        │
│                                                                                                  │
│                                                                                                  │
│ ▲                                                                                                │
│ ● Vim Mode                                             false                                     │
│                                                                                                  │
│   Disable Auto Update                                  false                                     │
│                                                                                                  │
│   Release Channel                                      Stable                                    │
│                                                                                                  │
│   Debug Keystroke Logging                              false                                     │
│                                                                                                  │
│   Language                                             Auto (detect from system)                 │
│                                                                                                  │
│   Output Format                                        Text                                      │
│                                                                                                  │
│   Hide Window Title                                    false                                     │
│                                                                                                  │
│   Show Status in Title                                 false                                     │
│                                                                                                  │
│ ▼                                                                                                │
│                                                                                                  │
│                                                                                                  │
│   Apply To                                                                                       │
│ ● User Settings                                                                                  │
│   Workspace Settings                                                                             │
│                                                                                                  │
│ (Use Enter to select, / to search, Tab to change focus)                                          │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with mixed boolean and number settings 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Settings                                                                                       │
│                                                                                                  │
│ Search: > Search settings                                                                        │
│                                                                                                  │
│                                                                                                  │
│ ▲                                                                                                │
│ ● Vim Mode                                             false*                                    │
│                                                                                                  │
│   Disable Auto Update                                  true*                                     │
│                                                                                                  │
│   Release Channel                                      Stable                                    │
│                                                                                                  │
│   Debug Keystroke Logging                              false                                     │
│                                                                                                  │
│   Language                                             Auto (detect from system)                 │
│                                                                                                  │
│   Output Format                                        Text                                      │
│                                                                                                  │
│   Hide Window Title                                    false*                                    │
│                                                                                                  │
│   Show Status in Title                                 false                                     │
│                                                                                                  │
│ ▼                                                                                                │
│                                                                                                  │
│                                                                                                  │
│   Apply To                                                                                       │
│ ● User Settings                                                                                  │
│   Workspace Settings                                                                             │
│                                                                                                  │
│ (Use Enter to select, / to search, Tab to change focus)                                          │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with tools and security settings 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Settings                                                                                       │
│                                                                                                  │
│ Search: > Search settings                                                                        │
│                                                                                                  │
│                                                                                                  │
│ ▲                                                                                                │
│ ● Vim Mode                                             false                                     │
│                                                                                                  │
│   Disable Auto Update                                  false                                     │
│                                                                                                  │
│   Release Channel                                      Stable                                    │
│                                                                                                  │
│   Debug Keystroke Logging                              false                                     │
│                                                                                                  │
│   Language                                             Auto (detect from system)                 │
│                                                                                                  │
│   Output Format                                        Text                                      │
│                                                                                                  │
│   Hide Window Title                                    false                                     │
│                                                                                                  │
│   Show Status in Title                                 false                                     │
│                                                                                                  │
│ ▼                                                                                                │
│                                                                                                  │
│                                                                                                  │
│   Apply To                                                                                       │
│ ● User Settings                                                                                  │
│   Workspace Settings                                                                             │
│                                                                                                  │
│ (Use Enter to select, / to search, Tab to change focus)                                          │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with various boolean settings enabled 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Settings                                                                                       │
│                                                                                                  │
│ Search: > Search settings                                                                        │
│                                                                                                  │
│                                                                                                  │
│ ▲                                                                                                │
│ ● Vim Mode                                             true*                                     │
│                                                                                                  │
│   Disable Auto Update                                  true*                                     │
│                                                                                                  │
│   Release Channel                                      Stable                                    │
│                                                                                                  │
│   Debug Keystroke Logging                              true*                                     │
│                                                                                                  │
│   Language                                             Auto (detect from system)                 │
│                                                                                                  │
│   Output Format                                        Text                                      │
│                                                                                                  │
│   Hide Window Title                                    true*                                     │
│                                                                                                  │
│   Show Status in Title                                 false                                     │
│                                                                                                  │
│ ▼                                                                                                │
│                                                                                                  │
│                                                                                                  │
│   Apply To                                                                                       │
│ ● User Settings                                                                                  │
│   Workspace Settings                                                                             │
│                                                                                                  │
│ (Use Enter to select, / to search, Tab to change focus)                                          │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
